--- a/theme/styles/adaptibility.scss
+++ b/theme/styles/adaptibility.scss
@@ -330,3 +330,41 @@
 
 
 }
+
+
+@media screen and (max-width: 550px) {
+
+    .home-page-landing .rt-button {
+        width: 100%;
+    }
+
+    .lp-wrp {
+        padding-left: 1.5rem;
+    }
+
+    .lsc{
+        padding-left: 2rem;
+        padding-right: 2rem;
+
+        .lsc-lft-arr, .lsc-rt-arr {
+            bottom: 2rem;
+            top: auto;
+            width: 40%;
+        }
+    }
+
+    .h2-desc{
+        .rt-button {
+            width: 100%;
+        }
+    }
+
+    .body.small{
+        font-size: 1.15rem;
+    }
+
+    .rt-button{
+        font-size: 1.25rem;
+    }
+
+}
