--- a/theme/components/all.scss
+++ b/theme/components/all.scss
@@ -4,11 +4,21 @@
 @import './Buttons/Buttons.scss';
 
 @import './Pages/LandingPage.scss';
+@import './Pages/ContactUs.scss';
+
+
 @import './Layouts/RCard.scss';
 @import './Layouts/CRI.scss';
 @import './Layouts/Separators.scss';
+@import './Layouts/RLImage.scss';
 
 @import './Cards/squareCard.scss';
 @import './Cards/stepCards.scss';
+@import './Cards/itCard.scss';
 
 @import './Footer/PageFooter.scss';
+
+@import './Loader/Loader.scss';
+
+
+@import './Inputs/Inputs.scss';
