--- a/theme/variables/base.scss
+++ b/theme/variables/base.scss
@@ -35,3 +35,7 @@ $b-contrast-accent-darker: hsl($contrast-hue, $accent-saturation, 16%);
 
 $b-contrast-dark-base: hsl($contrast-hue, 8%, 7%);
 $b-contrast-dark: hsl($contrast-hue, 1%, 20%);
+
+
+
+$red: hsl(0, 70%, 58%);
