--- a/rt-server/views/index.ejs
+++ b/rt-server/views/index.ejs
@@ -2,13 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/ritmbhara-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <title>Ritmbhara Svasth Parivar</title>
-    <script type="module" crossorigin src="/assets/index-kfGe5W7b.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/index-jcllP7x7.css">
+    <script type="module" crossorigin src="/assets/index-qOejbo7d.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/index-jNpz_9zs.css">
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="palette-light">
+    <div id="root" class="ov-h fw"></div>
   </body>
 </html>
